--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 		"lint-staged": "^13.2.2",
 		"prettier": "^2.8.8",
 		"react-test-renderer": "^18.2.0",
+		"tailwindcss": "^3.4.1",
 		"typescript": "^5.0.2",
 		"vite": "^4.3.2",
 		"vite-tsconfig-paths": "^4.2.0"
