--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.59.1",
 		"@typescript-eslint/parser": "^5.59.1",
 		"@vitejs/plugin-react-swc": "^3.0.0",
+		"autoprefixer": "^10.4.17",
 		"camelcase": "6",
 		"eslint": "^8.38.0",
 		"eslint-config-prettier": "^8.8.0",
@@ -55,6 +56,7 @@
 		"jest-environment-jsdom": "^29.5.0",
 		"jest-watch-typeahead": "^2.2.2",
 		"lint-staged": "^13.2.2",
+		"postcss": "^8.4.33",
 		"prettier": "^2.8.8",
 		"react-test-renderer": "^18.2.0",
 		"tailwindcss": "^3.4.1",
