--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
 	"dependencies": {
 		"jest": "^29.5.0",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"react-router": "^6.21.3",
+		"react-router-dom": "^6.21.3"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^17.6.1",
