--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
 		]
 	},
 	"dependencies": {
+		"@withease/factories": "^1.0.3",
+		"axios": "^1.6.7",
+		"effector": "^23.1.0",
+		"effector-react": "^23.1.0",
 		"jest": "^29.5.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
