--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		]
 	},
 	"dependencies": {
+		"@heroicons/react": "^2.1.1",
 		"@withease/factories": "^1.0.3",
 		"axios": "^1.6.7",
 		"clsx": "^2.1.0",
