--- a/package.json
+++ b/package.json
@@ -1,75 +1,75 @@
 {
-	"name": "react-vite-template",
-	"private": true,
-	"version": "0.0.0",
-	"scripts": {
-		"dev": "vite --host=0.0.0.0 --port=8000",
-		"build": "tsc && vite build",
-		"lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-		"preview": "vite preview --host=0.0.0.0 --port=8080",
-		"test": "NODE_ENV=test jest",
-		"prepare": "npx husky install",
-		"commitmsg": "commitlint -E HUSKY_GIT_PARAMS"
-	},
-	"husky": {
-		"hooks": {
-			"commit-msg": "npm run commitmsg",
-			"pre-commit": "lint-staged",
-			"pre-push": "npm run test"
-		}
-	},
-	"lint-staged": {
-		"*.{js,jsx,ts,tsx}": [
-			"eslint --fix",
-			"prettier --write"
-		]
-	},
-	"dependencies": {
-		"@heroicons/react": "^2.1.1",
-		"@withease/factories": "^1.0.3",
-		"axios": "^1.6.7",
-		"clsx": "^2.1.0",
-		"effector": "^23.1.0",
-		"effector-react": "^23.1.0",
-		"jest": "^29.5.0",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-router": "^6.21.3",
-		"react-router-dom": "^6.21.3"
-	},
-	"devDependencies": {
-		"@commitlint/cli": "^17.6.1",
-		"@commitlint/config-conventional": "^17.6.1",
-		"@swc/core": "^1.3.56",
-		"@swc/jest": "^0.2.26",
-		"@testing-library/jest-dom": "^5.16.5",
-		"@testing-library/react": "^14.0.0",
-		"@testing-library/user-event": "^14.4.3",
-		"@trivago/prettier-plugin-sort-imports": "^4.1.1",
-		"@types/jest": "^29.5.1",
-		"@types/react": "^18.0.28",
-		"@types/react-dom": "^18.0.11",
-		"@typescript-eslint/eslint-plugin": "^5.59.1",
-		"@typescript-eslint/parser": "^5.59.1",
-		"@vitejs/plugin-react-swc": "^3.0.0",
-		"autoprefixer": "^10.4.17",
-		"camelcase": "6",
-		"eslint": "^8.38.0",
-		"eslint-config-prettier": "^8.8.0",
-		"eslint-plugin-jsx-a11y": "^6.7.1",
-		"eslint-plugin-prettier": "^4.2.1",
-		"eslint-plugin-react": "^7.32.2",
-		"eslint-plugin-react-hooks": "^4.6.0",
-		"eslint-plugin-react-refresh": "^0.3.4",
-		"jest-environment-jsdom": "^29.5.0",
-		"jest-watch-typeahead": "^2.2.2",
-		"lint-staged": "^13.2.2",
-		"postcss": "^8.4.33",
-		"prettier": "^2.8.8",
-		"react-test-renderer": "^18.2.0",
-		"tailwindcss": "^3.4.1",
-		"typescript": "^5.0.2",
-		"vite": "^4.3.2",
-		"vite-tsconfig-paths": "^4.2.0"
-	}
+  "name": "react-vite-template",
+  "private": true,
+  "version": "0.0.0",
+  "scripts": {
+    "dev": "vite --host=0.0.0.0 --port=8000",
+    "build": "tsc && vite build",
+    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview --host=0.0.0.0 --port=8080",
+    "test": "test jest",
+    "prepare": "npx husky install",
+    "commitmsg": "commitlint -E HUSKY_GIT_PARAMS"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "npm run commitmsg",
+      "pre-commit": "lint-staged",
+      "pre-push": "npm run test"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
+  },
+  "dependencies": {
+    "@heroicons/react": "^2.1.1",
+    "@withease/factories": "^1.0.3",
+    "axios": "^1.6.7",
+    "clsx": "^2.1.0",
+    "effector": "^23.1.0",
+    "effector-react": "^23.1.0",
+    "jest": "^29.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router": "^6.21.3",
+    "react-router-dom": "^6.21.3"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^17.6.1",
+    "@commitlint/config-conventional": "^17.6.1",
+    "@swc/core": "^1.3.56",
+    "@swc/jest": "^0.2.26",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+    "@types/jest": "^29.5.1",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
+    "@vitejs/plugin-react-swc": "^3.0.0",
+    "autoprefixer": "^10.4.17",
+    "camelcase": "6",
+    "eslint": "^8.38.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.3.4",
+    "jest-environment-jsdom": "^29.5.0",
+    "jest-watch-typeahead": "^2.2.2",
+    "lint-staged": "^13.2.2",
+    "postcss": "^8.4.33",
+    "prettier": "^2.8.8",
+    "react-test-renderer": "^18.2.0",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.0.2",
+    "vite": "^4.3.2",
+    "vite-tsconfig-paths": "^4.2.0"
+  }
 }
