--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@heroicons/react": "^2.1.1",
 		"@withease/factories": "^1.0.3",
 		"axios": "^1.6.7",
+		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
 		"effector": "^23.1.0",
 		"effector-react": "^23.1.0",
