--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"clsx": "^2.1.0",
 		"effector": "^23.1.0",
 		"effector-react": "^23.1.0",
+		"gsap": "^3.12.5",
 		"jest": "^29.5.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
