--- a/package.json
+++ b/package.json
@@ -32,24 +32,30 @@
 		"clsx": "^2.1.0",
 		"effector": "^23.1.0",
 		"effector-react": "^23.1.0",
+		"effector-storage": "^7.0.0",
 		"jest": "^29.5.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router": "^6.21.3",
-		"react-router-dom": "^6.21.3"
+		"react-router-dom": "^6.21.3",
+		"react-speech-recognition": "^3.10.0"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^17.6.1",
 		"@commitlint/config-conventional": "^17.6.1",
+		"@speechly/speech-recognition-polyfill": "^1.3.0",
 		"@swc/core": "^1.3.56",
 		"@swc/jest": "^0.2.26",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^14.0.0",
 		"@testing-library/user-event": "^14.4.3",
 		"@trivago/prettier-plugin-sort-imports": "^4.1.1",
+		"@types/dom-speech-recognition": "^0.0.4",
 		"@types/jest": "^29.5.1",
 		"@types/react": "^18.0.28",
 		"@types/react-dom": "^18.0.11",
+		"@types/react-speech-recognition": "^3.9.5",
+		"@types/regenerator-runtime": "^0.13.5",
 		"@typescript-eslint/eslint-plugin": "^5.59.1",
 		"@typescript-eslint/parser": "^5.59.1",
 		"@vitejs/plugin-react-swc": "^3.0.0",
@@ -67,7 +73,9 @@
 		"lint-staged": "^13.2.2",
 		"postcss": "^8.4.33",
 		"prettier": "^2.8.8",
+		"react-speech-kit": "^3.0.1",
 		"react-test-renderer": "^18.2.0",
+		"regenerator-runtime": "^0.14.1",
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5.0.2",
 		"vite": "^4.3.2",
