--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"effector-react": "^23.1.0",
 		"effector-storage": "^7.0.0",
 		"jest": "^29.5.0",
+		"patronum": "^2.2.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router": "^6.21.3",
